Fixed style issues with the app: made color_square display:flex to properly center p tag, and fixed the borders and spacing

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,79 @@
-body {
+* {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  min-height: 100vh;
+}
+
+html {
+  font-size: 22px;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.App {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100%;
+  max-width: 400px;
+  margin: auto;
+}
+
+main {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  justify-content: center;
+  align-items: center;
+  overflow-y: auto;
+  gap: 0.5rem;
+}
+
+.color_square {
+  display: flex;
+  min-height: 400px;
+  width: 100%;
+  border: 0.15rem solid black;
+  border-radius: 0.25rem;
+  align-items: center;
+  justify-content: center;
+}
+
+.color_square p {
+  margin-top: auto;
+  margin-bottom: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+label {
+  position: absolute;
+  left: -99999px;
+}
+
+input[type='text'] {
+  flex-grow: 1;
+  width: 100%;
+  min-height: 48px;
+  max-height: 48px;
+  font-size: 1rem;
+  border-radius: 0.25rem;
+  outline: none;
+  padding-left: 0.5rem;
 }
